--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <!-- CSS styles -->
-<link id="styles" rel="stylesheet" type="text/css" href="styles/modern.css">
+<link id="styles" rel="stylesheet" type="text/css" href="styles/retro.css">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&family=Work+Sans&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
 <script src="index.js"></script>
 
 <!-- Include game data ('disk') -->
-<script src="game-disks/demo-disk.js"></script>
+<script src="game-disks/disk.js"></script>
 
 <!-- Load disk into engine -->
 <script>loadDisk(demoDisk);</script>
